data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1546.wast
;; 7. **Test Description**: Develop a loop containing a sequence of `br_if` instructions, each with different but legitimate conditions, and validate the sequential label indexing.    - **Constraint Checked**: Consecutive `br_if` execution within label constraints.    - **Relation to Infinite Loops**: Faulty label indexing in consecutive `br_if` may cause the loop never to reach its termination condition.

(assert_invalid
  (module
    (func $br_if_sequence
      (block $label1
        (loop $label2
          (br_if 1 (i32.const 1)) ;; should jump to $label1
          (br_if 0 (i32.const 0)) ;; should not jump, stays in loop
        )
      )
    )
  )
  "label index out of bounds"
)